libui/ui.h

_UI_EXTERN void uiQueueMain(void (*f)(void *data), void *data);
_UI_EXTERN void uiTimer(int milliseconds, int (*f)(void *data), void *data);
_UI_EXTERN void uiOnShouldQuit(int (*f)(void *data), void *data);
typedef struct uiWindow uiWindow;
_UI_EXTERN void uiWindowOnPositionChanged(uiWindow *w,
	void (*f)(uiWindow *sender, void *senderData), void *data);
_UI_EXTERN void uiWindowOnContentSizeChanged(uiWindow *w,
	void (*f)(uiWindow *sender, void *senderData), void *data);
_UI_EXTERN void uiWindowOnClosing(uiWindow *w,
	int (*f)(uiWindow *sender, void *senderData), void *data);
_UI_EXTERN void uiWindowOnKey(uiWindow *w,
	int (*f)(uiWindow *sender, int vk, int mods, void *senderData), void *data);
_UI_EXTERN void uiWindowOnFocusChanged(uiWindow *w,
	void (*f)(uiWindow *sender, void *senderData), void *data);
typedef struct uiButton uiButton;
_UI_EXTERN void uiButtonOnClicked(uiButton *b,
	void (*f)(uiButton *sender, void *senderData), void *data);
typedef struct uiCheckbox uiCheckbox;
_UI_EXTERN void uiCheckboxOnToggled(uiCheckbox *c,
	void (*f)(uiCheckbox *sender, void *senderData), void *data);
typedef struct uiEntry uiEntry;
_UI_EXTERN void uiEntryOnChanged(uiEntry *e,
	void (*f)(uiEntry *sender, void *senderData), void *data);
typedef struct uiTab uiTab;
_UI_EXTERN void uiTabOnSelected(uiTab *t,
        void (*f)(uiTab *sender, void *senderData), void *data);
typedef struct uiSpinbox uiSpinbox;
_UI_EXTERN void uiSpinboxOnChanged(uiSpinbox *s,
	void (*f)(uiSpinbox *sender, void *senderData), void *data);
typedef struct uiSlider uiSlider;
_UI_EXTERN void uiSliderOnChanged(uiSlider *s,
	void (*f)(uiSlider *sender, void *senderData), void *data);
_UI_EXTERN void uiSliderOnReleased(uiSlider *s,
	void (*f)(uiSlider *sender, void *senderData), void *data);
typedef struct uiCombobox uiCombobox;
_UI_EXTERN void uiComboboxOnSelected(uiCombobox *c,
	void (*f)(uiCombobox *sender, void *senderData), void *data);
typedef struct uiEditableCombobox uiEditableCombobox;
_UI_EXTERN void uiEditableComboboxOnChanged(uiEditableCombobox *c,
	void (*f)(uiEditableCombobox *sender, void *senderData), void *data);
typedef struct uiRadioButtons uiRadioButtons;
_UI_EXTERN void uiRadioButtonsOnSelected(uiRadioButtons *r,
	void (*f)(uiRadioButtons *sender, void *senderData), void *data);
typedef struct uiDateTimePicker uiDateTimePicker;
_UI_EXTERN void uiDateTimePickerOnChanged(uiDateTimePicker *d,
	void (*f)(uiDateTimePicker *sender, void *senderData), void *data);
typedef struct uiMultilineEntry uiMultilineEntry;
_UI_EXTERN void uiMultilineEntryOnChanged(uiMultilineEntry *e,
	void (*f)(uiMultilineEntry *sender, void *senderData), void *data);
typedef struct uiMenuItem uiMenuItem;
_UI_EXTERN void uiMenuItemOnClicked(uiMenuItem *m,
	void (*f)(uiMenuItem *sender, uiWindow *window, void *senderData), void *data);
typedef struct uiFontButton uiFontButton;
_UI_EXTERN void uiFontButtonOnChanged(uiFontButton *b,
	void (*f)(uiFontButton *sender, void *senderData), void *data);
typedef struct uiColorButton uiColorButton;
_UI_EXTERN void uiColorButtonOnChanged(uiColorButton *b,
	void (*f)(uiColorButton *sender, void *senderData), void *data);
typedef struct uiTable uiTable;
_UI_EXTERN void uiTableOnRowClicked(uiTable *t,
	void (*f)(uiTable *t, int row, void *data),
	void *data);
_UI_EXTERN void uiTableOnRowDoubleClicked(uiTable *t,
	void (*f)(uiTable *t, int row, void *data),
	void *data);
_UI_EXTERN void uiTableHeaderOnClicked(uiTable *t,
	void (*f)(uiTable *sender, int column, void *senderData), void *data);
_UI_EXTERN void uiTableOnSelectionChanged(uiTable *t, void (*f)(uiTable *t, void *data), void *data);
typedef struct uiTreeModel uiTreeModel;
typedef struct uiTreeModelHandler uiTreeModelHandler;
struct uiTreeModelHandler {
	int (*NumChildren)(uiTreeModelHandler *, uiTreeModel *, void *parent);
	void *(*Child)(uiTreeModelHandler *, uiTreeModel *, void *parent, int index);
	const char *(*Text)(uiTreeModelHandler *, uiTreeModel *, void *node);   
	int (*HasChildren)(uiTreeModelHandler *, uiTreeModel *, void *node);
	uiImage *(*Icon)(uiTreeModelHandler *, uiTreeModel *, void *node);   
};
_UI_EXTERN uiTreeModel *uiNewTreeModel(uiTreeModelHandler *mh);
_UI_EXTERN void uiFreeTreeModel(uiTreeModel *m);
_UI_EXTERN void uiTreeModelNodeInserted(uiTreeModel *m, void *parent, int index);
_UI_EXTERN void uiTreeModelNodeDeleted(uiTreeModel *m, void *parent, int index);
_UI_EXTERN void uiTreeModelNodeChanged(uiTreeModel *m, void *node);
typedef struct uiTree uiTree;
#define uiTree(this) ((uiTree *) (this))
_UI_EXTERN uiTree *uiNewTree(uiTreeModel *m);
_UI_EXTERN void uiTreeSetExpanded(uiTree *t, void *node, int expanded);
_UI_EXTERN int uiTreeExpanded(uiTree *t, void *node);
_UI_EXTERN void *uiTreeSelection(uiTree *t);
_UI_EXTERN void uiTreeSetSelection(uiTree *t, void *node);
_UI_EXTERN void uiTreeOnSelectionChanged(uiTree *t, void (*f)(uiTree *t, void *data), void *data);
_UI_EXTERN void uiTreeOnNodeActivated(uiTree *t, void (*f)(uiTree *t, void *node, void *data), void *data);
_UI_EXTERN void uiTreeOnNodeExpanded(uiTree *t, void (*f)(uiTree *t, void *node, int expanded, void *data), void *data);